2006-05-30  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: Add support for latex to text and info using
	hevea.
	Don't document it yet, as it's preliminary and on some regards
	incomplete.  It is usable though.
	(IFS): Use a more robust definition, taken from Autoconf.
	(bibaux_file_p): New, extracted from...
	(run_html): Generalize and rename as...
	(run_hevea): this.
	(run_core_conversion): Adjust.
	(option processing): Accept --text and --info.
	* configure.ac: Check for TEX and HEVEA.
	* util/defs.in: No longer create a texi file by default.
	Handle hevea requests.
	(create_input_tex, create_input_texi): New.
	(assert_files, list_files): Rework to use diff instead of test.
	And sort both lists of files before comparing them.
	* util/latex2html.test: New.
	* util/Makefile.am (TESTS): Update.

2006-05-29  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.h (getdocumenttext, __): new definitions for
	strings translated according to the document language, instead of
	the interface language.
	* makeinfo/makeinfo.c (getdocumenttext): new fn.
	(usage): new option --document-language to specify.
	* makeinfo/lang.h (document_language): new declaration.
	* makeinfo/lang.c (document_language): define.
	* makeinfo/defun.c, makeinfo/html.c, makeinfo/node.c,
	makeinfo/toc.c, makeinfo/xref.c: use __ instead of _ for document
		strings.
	* doc/texinfo.txi (makeinfo options): minimal documentation.
	From Norbert Preining, 10 Mar 2006 02:22:19 +0100.
	Debian bugs 113988 and 355367.

2006-05-28  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\indexdummies): \let\endinput=\empty, to
	avoid premature end of processing when an index entry is generated
	from a macro.
	Report from Graham Percival to help-texinfo, 22 May 2006 12:03:12.

	* doc/texinfo.tex (\dots): use width of three period characters if
	that is wider than 1.5em.  Report from Steve Peter.

	* system.h [__CYGWIN__] (NULL_DEVICE): define as /dev/null.
	From Ralf W.

2006-05-27  Karl Berry  <karl@gnu.org>
